modified index and whatever

--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>This is a title!</title>
   </head>
   <body>
 
-    <h1>HELL WORLD</h1>
+    <h1>HELLO WORLD</h1>
     <p>INDEX.HTML</p>
+
+    <p> Hello from Moldova! </p>
 
 
   </body>
